--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
     </footer>
-    <script src="perguntas.js"></script>
+    <script src="app.js"></script>
+<script src="perguntas.js"></script>
 </body>
 </html>
